# graph-store-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  main.css
apache-jena-fuseki/: Dockerfile  shiro.ini
src/: doc.rs  http.rs  lib.rs  table.rs
tests/: integration_test.rs
