[package]
name = "graph-store"
description = "Access to graph stores over the SPARQL 1.1 Graph Store HTTP Protocol"
version = "0.1.0"
authors = ["Sander Dijkhuis <mail@sanderdijkhuis.nl>"]
license = "MIT"
repository = "https://github.com/sander/graph-store-rs"
readme = "README.md"
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
async-trait = "0.1.24"
rdf = "0.1.4"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.2.1"
mockito = "0.25.1"
uuid = { version = "0.8", features = ["v4"] }
